# transcription

./: .gitignore  README.md  main.py  pyproject.toml
logs/: processing_log.csv
src/: transcribe.py
